--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -74,6 +74,16 @@
             android:layout_below="@+id/playingSongArtist"
             android:textAlignment="center" />
 
+        <LinearLayout
+            android:id="@+id/playlistsChips"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/playingSongGenre"
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal">
+        </LinearLayout>
+
     </RelativeLayout>
 
     <RelativeLayout
