--- a/app/src/main/res/layout/library_artists.xml
+++ b/app/src/main/res/layout/library_artists.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:id="@+id/artists"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/artists" />
+        android:footerDividersEnabled="false" />
 
     <include layout="@layout/library_empty" />
 
