--- a/app/src/main/res/layout/library_playlists.xml
+++ b/app/src/main/res/layout/library_playlists.xml
@@ -6,10 +6,11 @@
     <include layout="@layout/library_playlists_empty" />
 
     <ListView
+        android:id="@+id/playlists"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/playlists"
         android:choiceMode="singleChoice"
-        android:clickable="true" />
+        android:clickable="true"
+        android:footerDividersEnabled="false" />
 
 </RelativeLayout>
