--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -17,6 +17,15 @@
             android:layout_alignParentStart="true"
             android:id="@+id/playingMinimize">
 
+            <ImageButton
+                android:id="@+id/songMore"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/ic_more_vert" />
+
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
