Adds SeekBar to PlayingActivity

--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -93,6 +93,14 @@
             android:orientation="horizontal">
         </LinearLayout>
 
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp" />
+
     </RelativeLayout>
 
     <RelativeLayout
