--- a/app/src/main/res/layout/playlist.xml
+++ b/app/src/main/res/layout/playlist.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:background="#000000"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -65,10 +66,28 @@
         android:foreground="?attr/selectableItemBackground"
         android:text="Shuffle Play" />
 
-    <ListView
+    <!--<ListView
         android:id="@+id/playlistSongs"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:footerDividersEnabled="false" />
+        android:footerDividersEnabled="false" />-->
+
+    <buddybox.ui.MySwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- Need to wrap DragListView in another layout for
+            wrap_content to work for some reason -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/drag_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </FrameLayout>
+    </buddybox.ui.MySwipeRefreshLayout>
 
 </LinearLayout>
