--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -111,6 +111,24 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp" />
 
+        <TextView
+            android:id="@+id/songProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="16dp"
+            android:text="0:05" />
+
+        <TextView
+            android:id="@+id/songDuration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="16dp"
+            android:text="4:06" />
+
     </RelativeLayout>
 
     <RelativeLayout
