--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="buddybox.ui.MainActivity">
+    tools:context="buddybox.ui.MainActivity"
+    android:background="#000000">
 
     <include layout="@layout/permission_write_external_storage"
         android:id="@+id/permission" />
