--- a/app/src/main/res/layout/sharing_frame.xml
+++ b/app/src/main/res/layout/sharing_frame.xml
@@ -1,135 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="1"
-    android:gravity="top"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button3"
-        android:layout_alignBottom="@+id/button3"
-        android:layout_alignParentStart="true"
-        android:text="You have 3 buddies" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="Invite a Buddy"
-        android:textAlignment="gravity" />
-
-    <TextView
-        android:id="@+id/textView14"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/button3"
-        android:layout_below="@+id/button3"
-        android:layout_marginTop="12dp"
-        android:text="The more friends you have, the more songs you will receive. " />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button4"
-        android:layout_alignBottom="@+id/button4"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:text="You have 42 songs" />
+        android:layout_alignParentTop="true">
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/button3"
-        android:layout_below="@+id/textView14"
-        android:layout_marginTop="12dp"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="Add mp3 files"
-        android:textAlignment="gravity" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:orientation="vertical"
+            android:paddingBottom="80dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:weightSum="1">
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button4"
-        android:layout_marginTop="12dp"
-        android:text="IMPORTANT: This player shares the MP3 files in your music folder: /android/.../music Make sure all MP3 files there can be shared. " />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/button3"
+                android:layout_alignBottom="@+id/button3"
+                android:layout_alignParentStart="true"
+                android:text="You have 3 buddies" />
 
-    <Button
-        android:id="@+id/syncLibrary"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView16"
-        android:layout_marginTop="12dp"
-        android:text="Sync Library" />
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="Invite a Buddy"
+                android:textAlignment="gravity" />
 
-    <ProgressBar
-        android:id="@+id/syncLibrarySpinner"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignBottom="@+id/syncLibrary"
-        android:layout_alignTop="@+id/syncLibrary"
-        android:layout_toEndOf="@+id/mediaStorage"
-        android:layout_toStartOf="@+id/syncLibrary" />
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/button3"
+                android:layout_below="@+id/button3"
+                android:layout_marginTop="12dp"
+                android:text="The more friends you have, the more songs you will receive. " />
 
-    <TextView
-        android:id="@+id/textView25"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/syncLibrary"
-        android:layout_marginTop="12dp"
-        android:text="Free storage:" />
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/button4"
+                android:layout_alignBottom="@+id/button4"
+                android:layout_alignParentStart="true"
+                android:text="You have 42 songs" />
 
-    <TextView
-        android:id="@+id/textView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView25"
-        android:layout_marginTop="12dp"
-        android:text="Media storage:" />
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/button3"
+                android:layout_below="@+id/textView14"
+                android:layout_marginTop="12dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="Add mp3 files"
+                android:textAlignment="gravity" />
 
-    <TextView
-        android:id="@+id/freeStorage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView25"
-        android:layout_marginLeft="12dp"
-        android:layout_toEndOf="@+id/textView25"
-        android:text="2.3 GB"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/button4"
+                android:layout_marginTop="12dp"
+                android:text="IMPORTANT: This player shares the MP3 files in your music folder: /android/.../music Make sure all MP3 files there can be shared. " />
 
-    <TextView
-        android:id="@+id/mediaStorage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView26"
-        android:layout_marginLeft="12dp"
-        android:layout_toEndOf="@+id/textView26"
-        android:text="420 MB"
-        android:textStyle="bold" />
+            <Button
+                android:id="@+id/syncLibrary"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/textView16"
+                android:layout_marginTop="12dp"
+                android:text="Sync Library" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView26"
-        android:layout_marginTop="12dp" />
+            <ProgressBar
+                android:id="@+id/syncLibrarySpinner"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignBottom="@+id/syncLibrary"
+                android:layout_alignTop="@+id/syncLibrary"
+                android:layout_toEndOf="@+id/mediaStorage"
+                android:layout_toStartOf="@+id/syncLibrary" />
 
+            <TextView
+                android:id="@+id/textView25"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/syncLibrary"
+                android:layout_marginTop="30dp"
+                android:text="Free storage:" />
+
+            <TextView
+                android:id="@+id/textView26"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView25"
+                android:layout_marginTop="12dp"
+                android:text="Media storage:" />
+
+            <TextView
+                android:id="@+id/freeStorage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textView25"
+                android:layout_marginLeft="12dp"
+                android:layout_toEndOf="@+id/textView25"
+                android:text="2.3 GB"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/mediaStorage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textView26"
+                android:layout_marginLeft="12dp"
+                android:layout_toEndOf="@+id/textView26"
+                android:text="420 MB"
+                android:textStyle="bold" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView26"
+                android:layout_marginTop="12dp" />
+
+            <ImageView
+                android:id="@+id/headphones"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView27"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="20dp"
+                app:srcCompat="@drawable/ic_headphones" />
+
+            <SeekBar
+                android:id="@+id/headphoneSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/headphones"
+                android:layout_alignTop="@+id/headphones"
+                android:layout_toEndOf="@+id/headphones" />
+
+            <ImageView
+                android:id="@+id/speaker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/headphones"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="20dp"
+                app:srcCompat="@drawable/ic_speaker_phone" />
+
+            <SeekBar
+                android:id="@+id/speakerSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/speaker"
+                android:layout_alignParentEnd="true"
+                android:layout_alignTop="@+id/speaker"
+                android:layout_toEndOf="@+id/speaker" />
+
+            <TextView
+                android:id="@+id/textView27"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/progressBar"
+                android:layout_marginTop="20dp"
+                android:text="Max Volume" />
+
+            <ImageView
+                android:id="@+id/bluetooth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/speaker"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="20dp"
+                app:srcCompat="@drawable/ic_bluetooth" />
+
+            <SeekBar
+                android:id="@+id/bluetoothSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignTop="@+id/bluetooth"
+                android:layout_toEndOf="@+id/bluetooth" />
+
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
