--- a/app/src/main/res/layout/sharing_frame.xml
+++ b/app/src/main/res/layout/sharing_frame.xml
@@ -198,7 +198,7 @@
                 android:layout_below="@+id/speaker"
                 android:layout_marginRight="12dp"
                 android:layout_marginTop="20dp"
-                app:srcCompat="@drawable/ic_bluetooth" />
+                app:srcCompat="@drawable/ic_bluetooth_grey" />
 
             <SeekBar
                 android:id="@+id/bluetoothSeekBar"
