--- a/app/src/main/res/layout/list_footer.xml
+++ b/app/src/main/res/layout/list_footer.xml
@@ -2,7 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_footer"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
+    android:minHeight="60dp"
     android:orientation="vertical">
 
+    <ProgressBar
+        android:id="@+id/footerLoading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
+        android:padding="10dp"
+        android:visibility="gone" />
 </LinearLayout>
