--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -50,27 +50,38 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="0.97"
         android:gravity="center_horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/songContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/playlistsScroll"
-            android:layout_alignParentStart="true"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:layout_alignParentStart="true">
+
+            <ImageView
+                android:id="@+id/art"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/playingSongName"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:adjustViewBounds="false"
+                android:cropToPadding="false"
+                app:srcCompat="@drawable/ic_audiotrack" />
 
             <TextView
                 android:id="@+id/playingSongName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="40dp"
+                android:layout_above="@+id/playingSongArtist"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="10dp"
                 android:text="@string/song"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -80,7 +91,8 @@
                 android:id="@+id/playingSongArtist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/playingSongName"
+                android:layout_above="@+id/playingSongGenre"
+                android:layout_alignParentStart="true"
                 android:text="@string/artist"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -89,27 +101,20 @@
                 android:id="@+id/playingSongGenre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/playingSongArtist"
-                android:layout_marginBottom="40dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
                 android:text="@string/genre"
                 android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="12sp" />
 
-            <!--<RelativeLayout
-                android:id="@+id/playlistsChips"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/playingSongGenre"
-                android:layout_marginTop="40dp"
-                android:orientation="horizontal">-->
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <ScrollView
             android:id="@+id/playlistsScroll"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="80dp"
             android:layout_above="@+id/seekBar"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="20dp">
