--- a/app/src/main/res/layout/sharing_frame.xml
+++ b/app/src/main/res/layout/sharing_frame.xml
@@ -11,8 +11,8 @@
         android:layout_alignParentTop="true">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:gravity="top"
             android:orientation="vertical"
             android:paddingBottom="80dp"
@@ -20,81 +20,110 @@
             android:paddingRight="20dp"
             android:weightSum="1">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/button3"
-                android:layout_alignBottom="@+id/button3"
-                android:layout_alignParentStart="true"
-                android:text="You have 3 buddies" />
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="20dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="Invite a Buddy"
-                android:textAlignment="gravity" />
-
-            <TextView
-                android:id="@+id/textView14"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/button3"
-                android:layout_below="@+id/button3"
-                android:layout_marginTop="12dp"
-                android:text="The more friends you have, the more songs you will receive. " />
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:id="@+id/linearLayout">
 
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/button4"
-                android:layout_alignBottom="@+id/button4"
-                android:layout_alignParentStart="true"
-                android:text="You have 42 songs" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="12dp">
 
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/button3"
-                android:layout_below="@+id/textView14"
-                android:layout_marginTop="12dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="Add mp3 files"
-                android:textAlignment="gravity" />
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:text="Buddies"
+                        android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/button4"
-                android:layout_marginTop="12dp"
-                android:text="IMPORTANT: This player shares the MP3 files in your music folder: /android/.../music Make sure all MP3 files there can be shared. " />
+                    <TextView
+                        android:id="@+id/textView29"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="42"
+                        android:textAlignment="center"
+                        android:textSize="30sp" />
+
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="false"
+                        android:layout_alignParentTop="false"
+                        android:layout_marginTop="12dp"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:text="Invite a Buddy"
+                        android:textAlignment="gravity" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="12dp">
+
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/button4"
+                        android:layout_alignBottom="@+id/button4"
+                        android:layout_alignParentStart="true"
+                        android:text="Songs"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/textView28"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="312"
+                        android:textAlignment="center"
+                        android:textSize="30sp" />
+
+                    <Button
+                        android:id="@+id/button4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:text="Add mp3 files"
+                        android:textAlignment="gravity" />
+
+                </LinearLayout>
+            </LinearLayout>
 
             <Button
                 android:id="@+id/syncLibrary"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_below="@+id/textView16"
-                android:layout_marginTop="12dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
                 android:text="Sync Library" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/linearLayout"
+                android:text="IMPORTANT: This player shares the MP3 files in your music folder: /android/.../music Make sure all MP3 files there can be shared. " />
 
             <ProgressBar
                 android:id="@+id/syncLibrarySpinner"
                 style="?android:attr/progressBarStyleLarge"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_alignBottom="@+id/syncLibrary"
+                android:layout_above="@+id/textView25"
                 android:layout_alignTop="@+id/syncLibrary"
-                android:layout_toEndOf="@+id/mediaStorage"
                 android:layout_toStartOf="@+id/syncLibrary" />
 
             <TextView
