--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:id="@+id/songItem"
@@ -25,13 +26,26 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/songMore">
 
-        <TextView android:id="@+id/songName"
+        <ImageView
+            android:id="@+id/albumArt"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignBottom="@+id/text2"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/songName"
+            android:layout_marginRight="12dp"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_audiotrack" />
+
+        <TextView
+            android:id="@+id/songName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textAppearance="?attr/textAppearanceListItem"
+            android:layout_toEndOf="@+id/albumArt"
+            android:singleLine="true"
             android:text="Item"
-            android:singleLine="true" />
+            android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView android:id="@+id/text2"
             android:layout_width="match_parent"
@@ -41,6 +55,7 @@
             android:text="subtitle"
             android:layout_marginBottom="8dp"
             android:singleLine="true" />
+
     </RelativeLayout>
 
 </RelativeLayout>
