--- a/app/src/main/res/layout/sharing_frame.xml
+++ b/app/src/main/res/layout/sharing_frame.xml
@@ -80,7 +80,7 @@
                         android:textAlignment="center" />
 
                     <TextView
-                        android:id="@+id/textView28"
+                        android:id="@+id/songsCount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
