--- a/app/src/main/res/layout/edit_song.xml
+++ b/app/src/main/res/layout/edit_song.xml
@@ -60,12 +60,12 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:labelFor="@+id/songName"
+        android:labelFor="@+id/name"
         android:paddingLeft="4dp"
         android:text="Name*" />
 
     <EditText
-        android:id="@+id/songName"
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
