--- a/app/src/main/res/layout/playlist_song_item.xml
+++ b/app/src/main/res/layout/playlist_song_item.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/songMore">
 
-        <TextView android:id="@+id/songName"
+        <TextView android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -37,8 +37,8 @@
             android:id="@+id/songSubtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/songName"
-            android:layout_below="@+id/songName"
+            android:layout_alignStart="@+id/name"
+            android:layout_below="@+id/name"
             android:layout_marginBottom="8dp"
             android:singleLine="true"
             android:text="subtitle" />
